Fix flickering while searching, Fix selection of search issue

--- a/css/client.css
+++ b/css/client.css
@@ -129,7 +129,7 @@
   line-height: 1.4;
   cursor: pointer;
 }
-.appbase_modal .twitter-typeahead .record_link .small_link em{
+.appbase_modal .twitter-typeahead .record_link em{
     font-weight: 600;
     font-style: normal !important;
 }
